RESOLVED FIXED245308
AX: Focus state cannot be read or updated for AccessibilityNodeObjects
https://bugs.webkit.org/show_bug.cgi?id=245308
Summary AX: Focus state cannot be read or updated for AccessibilityNodeObjects
Tyler Wilcock
Reported 2022-09-16 19:44:29 PDT
This means that AX clients cannot set these objects as focused, or accurately determine if they're focused.
Attachments
Patch (15.47 KB, patch)
2022-09-16 19:50 PDT, Tyler Wilcock
no flags
Patch (15.54 KB, patch)
2022-09-18 11:11 PDT, Tyler Wilcock
no flags
Radar WebKit Bug Importer
Comment 1 2022-09-16 19:44:44 PDT
Tyler Wilcock
Comment 2 2022-09-16 19:50:19 PDT
Tyler Wilcock
Comment 3 2022-09-18 11:11:16 PDT
EWS
Comment 4 2022-09-18 15:21:26 PDT
Committed 254618@main (61b68425a2b4): <https://commits.webkit.org/254618@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 462425 [details].
Note You need to log in before you can comment on or make changes to this bug.