AX: Focus state cannot be read or updated for AccessibilityNodeObjects https://bugs.webkit.org/show_bug.cgi?id=245308 rdar://problem/100055122

Reviewed by Chris Fleizach.

AccessibilityRenderObject has implementations of `isFocused` and
`setFocused`, but AccessibilityNodeObject does not. Because these
implementations don't actually require a renderer, only a node, this
patch moves them to AccessibilityNodeObject.

This allows AX clients to read and update the focus state of
AccessibilityNodeObjects.

* LayoutTests/accessibility/basic-focusability-expected.txt: Added.
* LayoutTests/accessibility/basic-focusability.html: Added.
* LayoutTests/platform/glib/TestExpectations: Disable new test.
* LayoutTests/platform/ios/TestExpectations: Enable new test.
* LayoutTests/platform/win/TestExpectations: Disable new test.
* Source/WebCore/accessibility/AccessibilityNodeObject.cpp:
(WebCore::AccessibilityNodeObject::isFocused const):
(WebCore::AccessibilityNodeObject::setFocused):
* Source/WebCore/accessibility/AccessibilityNodeObject.h:
* Source/WebCore/accessibility/AccessibilityRenderObject.cpp:
(WebCore::AccessibilityRenderObject::isFocused const): Deleted.
(WebCore::AccessibilityRenderObject::setFocused): Deleted.
* Source/WebCore/accessibility/AccessibilityRenderObject.h:
* Source/WebCore/accessibility/ios/WebAccessibilityObjectWrapperIOS.mm:
(-[WebAccessibilityObjectWrapper _accessibilityIsFocusedForTesting]):
* Tools/WebKitTestRunner/InjectedBundle/ios/AccessibilityUIElementIOS.mm:
(WTR::AccessibilityUIElement::isFocused const):

Canonical link: https://commits.webkit.org/254618@main